Fixing dialog z-index

--- a/css/sensor-connect.less
+++ b/css/sensor-connect.less
@@ -99,6 +99,7 @@
 
   .lost-connection-dialog {
     position: fixed;
+    z-index: 100;
     width: 476px;
     height: 120px;
     left: 274px;
